# server

./: .gitignore  .justfile  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  deny.toml  release-plz.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  coverage.yml
src/: args.rs  lib.rs  log.rs  main.rs  router.rs  service.rs
src/router/: api.rs
web/: package.json
web/app/: page.tsx
