[package]
name = "server"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Terakomari <im.terakomari@icloud.com>"]

[dependencies]
# https://github.com/dtolnay/anyhow
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
# https://github.com/tokio-rs/tracing
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
# https://github.com/tokio-rs/tracing
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
  "std",
  "fmt",
  "ansi",
  "env-filter",
  # https://docs.rs/tracing-subscriber/latest/tracing_subscriber/fmt/time/struct.ChronoLocal.html
  "chrono",
  "tracing-log",
  "smallvec",
] }
# https://github.com/tokio-rs/tracing
tracing-appender = { version = "0.2.3", default-features = false }
# https://github.com/tokio-rs/tracing
tracing-log = { version = "0.2.0", default-features = false, features = [
  "std",
  "log-tracer",
] }
# https://github.com/tokio-rs/axum
axum = { version = "0.8.6", default-features = false, features = [
  "http1",
  "http2",
  "json",
  "multipart",
  "tokio",
  "tower-log",
  "tracing",
] }
# https://github.com/murar8/axum_typed_multipart
axum_typed_multipart = { version = "0.16.4", default-features = false }
# https://github.com/tower-rs/tower
tower = { version = "0.5.2", default-features = false, features = [
  "limit",
  "load-shed",
  "timeout",
] }
# https://github.com/tower-rs/tower-http
tower-http = { version = "0.6.6", default-features = false, features = [
  "auth",
  "compression-full",
  "decompression-full",
  "trace",
  "fs",
] }
# https://github.com/tokio-rs/tokio
tokio = { version = "1.48.0", default-features = false, features = [
  "fs",
  "macros",
  "signal",
  "rt-multi-thread",
] }
# https://github.com/zkat/supports-color
supports-color = { version = "3.0.2", default-features = false }
# https://github.com/clap-rs/clap
clap = { version = "4.5.51", default-features = false, features = [
  "std",
  "color",
  "help",
  "usage",
  "error-context",
  "suggestions",
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
] }
# https://github.com/clap-rs/clap-verbosity-flag
clap-verbosity-flag = { version = "3.0.4", default-features = false }
# https://github.com/purpleprotocol/mimalloc_rust
mimalloc = { version = "0.1.48", default-features = false }
# https://github.com/serde-rs/serde
serde = { version = "1.0.228", default-features = false, features = [
  "std",
  "derive",
] }
# https://github.com/kardeiz/sanitize-filename
sanitize-filename = { version = "0.6.0", default-features = false }
# https://github.com/uuid-rs/uuid
uuid = { version = "1.18.1", default-features = false, features = [
  "std",
  "v4",
  "fast-rng",
] }
# https://github.com/chipsenkbeil/service-manager-rs
service-manager = { version = "0.8.0", default-features = false, features = [
  "encoding",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = 'abort'
